--- a/Chp20Challenege/templates/spine1_dc1.j2
+++ b/Chp20Challenege/templates/spine1_dc1.j2
@@ -1,28 +1,22 @@
+#jinja2: trim_blocks:False
 service routing protocols model multi-agent
-!!
 {%- for int in underlay[inventory_hostname]['interfaces'] %}
 {%- if 'loopback' not in int %}
 interface {{ int }}
    ip address {{ underlay[inventory_hostname]['interfaces'][int]['ipv4'] }}/31
    no switchport
    mtu 9214
-!
 {%- endif %}
 {%- if 'loopback' in int %}
 interface {{ int }}
    ip address {{ underlay[inventory_hostname]['interfaces'][int]['ipv4'] }}/32
-!
 {%- endif %}
 {%- endfor %}  
-!
 ip prefix-list LOOPBACK seq 10 permit {{ underlay[inventory_hostname]['interfaces']['loopback0']['ipv4'] }}/32 eq 32
-!
 route-map LOOPBACK permit 10
    match ip address prefix-list LOOPBACK
-!
 peer-filter LEAF-AS-RANGE
    10 match as-range 65000-65535 result accept
-!
 router bgp {{ underlay[inventory_hostname]['asn'] }}
    router-id {{ underlay[inventory_hostname]['interfaces']['loopback0']['ipv4'] }}
    no bgp default ipv4-unicast
@@ -33,8 +27,6 @@ router bgp {{ underlay[inventory_hostname]['asn'] }}
    neighbor LEAF_Underlay send-community
    neighbor LEAF_Underlay maximum-routes 12000
    redistribute connected route-map LOOPBACK
-   !
    address-family ipv4
       neighbor LEAF_Underlay activate
       redistribute connected route-map LOOPBACK
-!
